# ImageDownloader

./: .astylerc  .clang-format  .drone.yml  .gitignore  CMakeLists.txt
configs/: log4cxx.xml
include/: logger.h  mainwindow.h  pooldialog.h  searchdialog.h  searchoptions.h  tagtextedit.h  utils.h
include/image/: blacklistimage.h  fraction.h  image.h  imagefinder.h  imageinfo.h  wallpaperimage.h
include/network/: danbooruworker.h  downloadhelper.h  gelbooruworker.h  imageworker.h  konachanworker.h  workerfactory.h
resources/: imagedownloader.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.ui  searchdialog.cpp  searchdialog.ui
src/image/: image.cpp  imagefinder.cpp  imageinfo.cpp
src/network/: danbooruworker.cpp  downloadhelper.cpp  gelbooruworker.cpp  imageworker.cpp  konachanworker.cpp
src/simdjson/: simdjson.cpp
